force-app/main/default/objects/Precios__c/Precios__c.object-meta.xml
<CustomObject>
    <label>Precio</label>
    <nameField>
        <label>Precios Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Precios</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>