force-app/main/default/objects/Precios__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>permite relacionar el precio con el cliente</description>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cliente</relationshipLabel>
    <relationshipName>Precios</relationshipName>
    <type>Lookup</type>
</CustomField>