force-app/main/default/objects/Precios__c/fields/Codigo_de_Precio__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Precio__c</fullName>
    <externalId>true</externalId>
    <label>Codigo de Precio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>