force-app/main/default/objects/Precios__c/fields/Descrip__c.field-meta.xml
<CustomField>
    <fullName>Descrip__c</fullName>
    <formula>Detalle_de_producto__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descrip</label>
    <type>Text</type>
</CustomField>