force-app/main/default/objects/Precios__c/fields/Descrip_Producto__c.field-meta.xml
<CustomField>
    <fullName>Descrip_Producto__c</fullName>
    <formula>Detalle_de_producto__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descrip Producto</label>
    <type>Text</type>
</CustomField>