force-app/main/default/objects/Precios__c/fields/Descrp_UMV__c.field-meta.xml
<CustomField>
    <fullName>Descrp_UMV__c</fullName>
    <formula>Unidad_de_Medida__r.Descripciom_unidad_de_Medida__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descrp UMV</label>
    <type>Text</type>
</CustomField>