force-app/main/default/objects/Precios__c/fields/Detalle_de_producto__c.field-meta.xml
<CustomField>
    <fullName>Detalle_de_producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detalle de producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Precios</relationshipLabel>
    <relationshipName>Precios</relationshipName>
    <type>Lookup</type>
</CustomField>