force-app/main/default/objects/Precios__c/fields/Estado_lista_de_precio__c.field-meta.xml
<CustomField>
    <fullName>Estado_lista_de_precio__c</fullName>
    <label>Estado lista de precio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mantiene</fullName>
            </value>
            <value>
                <fullName>Hasta agotar Stock</fullName>
            </value>
            <value>
                <fullName>Vencida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>