force-app/main/default/objects/Precios__c/fields/Fecha_Vigencia_Hasta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vigencia_Hasta__c</fullName>
    <description>Fecha limite de vigencia del precio</description>
    <label>Fecha Vigencia Hasta</label>
    <required>true</required>
    <type>Date</type>
</CustomField>