force-app/main/default/objects/Precios__c/fields/Holding__c.field-meta.xml
<CustomField>
    <fullName>Holding__c</fullName>
    <description>nombre del holding al que pertenece el cliente</description>
    <formula>Cliente__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Holding</label>
    <type>Text</type>
</CustomField>