force-app/main/default/objects/Precios__c/fields/Oficina_de_Ventas__c.field-meta.xml
<CustomField>
    <fullName>Oficina_de_Ventas__c</fullName>
    <label>Oficina de Ventas</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S001 - Suc Santiago</fullName>
            </value>
            <value>
                <fullName>S002 - Suc Coquimbo</fullName>
            </value>
            <value>
                <fullName>S003 - Suc Temuco</fullName>
            </value>
            <value>
                <fullName>S004 - Suc Concepción</fullName>
            </value>
            <value>
                <fullName>S005 - Suc Antofagasta</fullName>
            </value>
            <value>
                <fullName>S006 - Suc Puerto Montt</fullName>
            </value>
            <value>
                <fullName>S007 - Suc Iquique</fullName>
            </value>
            <value>
                <fullName>S008 - Suc Curicó</fullName>
            </value>
            <value>
                <fullName>S009 - Suc Calama</fullName>
            </value>
            <value>
                <fullName>S015 - Suc Viña del Mar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>