force-app/main/default/objects/Precios__c/fields/Precio_de_lista__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_lista__c</fullName>
    <description>Precio de lista del product</description>
    <label>Precio de lista</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>