force-app/main/default/objects/Precios__c/fields/TextHolding__c.field-meta.xml
<CustomField>
    <fullName>TextHolding__c</fullName>
    <label>TextHolding</label>
    <length>80</length>
    <type>Text</type>
</CustomField>