force-app/main/default/objects/Precios__c/fields/Texto_Codigo_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Texto_Codigo_Cliente__c</fullName>
    <label>Texto Codigo Cliente</label>
    <length>80</length>
    <type>Text</type>
</CustomField>