force-app/main/default/objects/Precios__c/fields/Unidad_de_Medida__c.field-meta.xml
<CustomField>
    <fullName>Unidad_de_Medida__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Unidad de medida de los productos</description>
    <label>Unidad de Medida</label>
    <referenceTo>Unidad_de_Medida__c</referenceTo>
    <relationshipLabel>Precios</relationshipLabel>
    <relationshipName>Precios</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>