force-app/main/default/objects/Precios__c/listViews/Todos_los_Precios.listView-meta.xml
<ListView>
    <fullName>Todos_los_Precios</fullName>
    <columns>NAME</columns>
    <columns>SKU__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SKU__c</field>
        <operation>equals</operation>
        <value>104547030</value>
    </filters>
    <label>Todos los Precios</label>
</ListView>